--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<section class="main">
 		<h2 id = "catname1"></h2>
 		<div class="cat-photo" id="cat1">
-			<a data-flickr-embed="true"  href="https://www.flickr.com/photos/poplinre/625069434/in/photostream/" title="Xuxa the Kitten #7"><img src="https://farm2.staticflickr.com/1126/625069434_db86b67df8_b.jpg" width="50%" alt="Xuxa the Kitten #7"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+			<img data-flickr-embed="true"  href="https://www.flickr.com/photos/poplinre/625069434/in/photostream/" title="Xuxa the Kitten #7"><img src="https://farm2.staticflickr.com/1126/625069434_db86b67df8_b.jpg" width="50%" alt="Xuxa the Kitten #7"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 		</div>
 		<h2 id = "catname2"></h2>
 		<div class="cat-photo" id="cat2">
-			<a data-flickr-embed="true"  href="https://www.flickr.com/photos/chewie/2290467335" title="Dramatic kitten"><img src="https://farm3.staticflickr.com/2298/2290467335_89067c7b51_b.jpg" width="50%" alt="Dramatic kitten"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+			<img data-flickr-embed="true"  href="https://www.flickr.com/photos/chewie/2290467335" title="Dramatic kitten"><img src="https://farm3.staticflickr.com/2298/2290467335_89067c7b51_b.jpg" width="50%" alt="Dramatic kitten"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 		</div>
 
 	</section>
