--- a/cat-clicker-premium/index.html
+++ b/cat-clicker-premium/index.html
@@ -6,8 +6,14 @@
 			<ul id= "cat-list"></ul>
 				<div id="cat">
 				<h2 id="cat-name"></h2>
-				<div id="cat-count"></div>
+				<div id="cat-count"></div></div>
+				<button id="admin" type="button" name="admin">Admin</button>
+				<input id="admin-catName" name="cat-name" type="text" value="cat name"></input>
+				<input class="admin-url" name="cat-image" type="text" value="url"></input>
+				<input class="admin-url" name="cat-clicks" type="text" value="Clicks"></input>
+				<button type="button" id="admin-cancel">Cancel</button>
+				<button type="submit"> Submit</button>
 				<img id="cat-image" src=""  alt="cute cat">
-				</div>
+
 	<script src="cat-clicker.js"></script>
 </body>
