--- a/cat-clicker-premium/index.html
+++ b/cat-clicker-premium/index.html
@@ -12,7 +12,7 @@
 				<input class="admin-url" name="cat-image" type="text" value="url"></input>
 				<input class="admin-url" name="cat-clicks" type="text" value="Clicks"></input>
 				<button type="button" id="admin-cancel">Cancel</button>
-				<button type="submit"> Submit</button>
+				<button type="submit" id="admin-submit"> Submit</button>
 				<img id="cat-image" src=""  alt="cute cat">
 
 	<script src="cat-clicker.js"></script>
